--- a/src/component/main/main-dishes/main-dishes.scss
+++ b/src/component/main/main-dishes/main-dishes.scss
@@ -1,7 +1,6 @@
 .main {
   display: inline-block;
   width: 60%;
-  // max-width: 1070px;
   background-color: rgba(46%, 46%, 46%, 0.5);
   text-align: center;
   padding: 0 20px;
@@ -17,11 +16,7 @@
     margin: 0;
   }
 
-  .varenuk-svg,
-  .bbg-png,
-  .salad-png,
-  .alcohol-png,
-  .coffee-png {
+  .pictogram {
     display: inline;
     width: 5%;
     margin-right: 10px;
@@ -52,5 +47,113 @@
   }
 }
 
-@media (max-width: 1383px) {
+@media (max-width: 1382px) {
+  body {
+    height: 100vh;
+  }
+  .main .item p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1249px) {
+  body {
+    height: 100vh;
+  }
+
+  .main .item p {
+    font-size: 14px;
+  }
+
+  .main h1 {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 1116px) {
+  body {
+    height: 100vh;
+  }
+
+  .main .item-name {
+    width: 50%;
+  }
+
+  .main .gram {
+    width: 35%;
+  }
+
+  .main .item-hot-drinks {
+    padding: 0 16px;
+  }
+}
+
+@media (max-width: 1070px) {
+  body {
+    height: 100vh;
+  }
+
+  .main h1 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 992px) {
+  .text {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 868px) {
+  .header {
+    width: 100%;
+  }
+
+  .main {
+    width: 100%;
+  }
+
+  .text {
+    font-size: 32px;
+  }
+
+  .main .pictogram {
+    width: 7%;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    width: 100%;
+  }
+
+  .main {
+    width: 100%;
+  }
+
+  .text {
+    font-size: 32px;
+  }
+
+  .main .pictogram {
+    display: inline;
+    width: 8%;
+    margin-right: 10px;
+  }
+
+  .main .item-hot-drinks {
+    padding: 0px 10px;
+  }
+
+  .main {
+    padding: 0 10px;
+  }
+
+  .item .gram {
+    padding-right: 10px;
+  }
+
+  .main .item p {
+    font-size: 16px;
+  }
 }
